# micrograd-cpp

cpp/: CMakeLists.txt  README.md  engine.h  main.cpp  nn.h
